# Kernal-Hardening

./: .gitignore  Cargo.toml  README.md  project_contents.txt
src/: main.rs  shutdown.rs
src/hardening/: anti_debug.rs  dump.rs  input.rs  memory.rs  mod.rs  namespace.rs  seccomp.rs
src/secrets/: secret.rs
