[package]
name = "kr-see"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
signal-hook = "0.3"
zeroize = { version = "1.8", features = ["derive"] }
lazy_static = "1.4"

[profile.release]
panic = "abort"    
lto = "fat"        
codegen-units = 1  
strip = "symbols"   
overflow-checks = true
opt-level = "z"    
